// The Stream.toList() method returns an unmodifiable list, while Collectors.toList() typically returns a modifiable ArrayList                 //.collect(Collectors.toList());                 .toList();